# BetterDataETL

./: .env  README.md  run_local.py
functions/bronze_to_silver/: main.py  requirements_deploy.txt  status_monitor.py
functions/cleanup_on_delete/: main.py
functions/manual_etl_loader/: Dockerfile  main.py
functions/schema_alert/: main.py
functions/schema_detector/: main.py  requirements.txt
functions/status_alert/: main.py
scripts/: deploy.sh
shared/: pyproject.toml
shared/src/etl_carriers/: __init__.py
shared/src/etl_carriers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/src/etl_carriers/config/: __init__.py  aor_config.py  carrier_config.py  settings.py  special_reports.py
shared/src/etl_carriers/loaders/: __init__.py  bigquery_loader.py  gcs_loader.py
shared/src/etl_carriers/transformers/: __init__.py  cigna_enricher.py  floridablue_enricher.py  policies_transformer.py  special_reports_transformer.py
shared/src/etl_carriers/utils/: __init__.py  data_parsers.py  email_alerts.py  file_utils.py  skiprows_detector.py
tests/unit/config/: test_carrier_config.py
tests/unit/utils/: test_data_parsers.py  test_file_utils.py
